[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6.2"
hyper = "0.14.23"
serde = { version = "1.0", features = ["derive"] }
config = "0.13.3"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4.15"
http = "0.2.8"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11.13"
