[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6.2"
hyper = "0.14.23"
serde = { version = "1.0", features = ["derive"] }
config = "0.13.3"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4.15"
http = "0.2.8"
tracing = {version = "0.1.37", features = ["log"]}
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3"
tower-service = "0.3.2"
tower-layer = "0.3.2"
tower-http = { version = "0.3.5", features = ["trace", "request-id"] }
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "3"
unicode-segmentation = "1"
validator = "0.16.0"
reqwest = {version = "0.11.13", features = ["json"]}
rand = { version = "0.8.5", features=["std_rng"] }
thiserror = "1"
anyhow = "1"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
once_cell = "1"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"
